--- a/Plachtovac/Client/Components/Plachta/PlachtaMenu.razor
+++ b/Plachtovac/Client/Components/Plachta/PlachtaMenu.razor
@@ -89,6 +89,9 @@
                             <Tooltip Text="Odstráň vedúceho">
                                 <Button class="btn btn-sm btn-clear" @onclick="() => ZmazVeduceho(veduci)"><i class="text-danger fas fa-user-minus"></i></Button>
                             </Tooltip>
+                            <Tooltip Text="Tlač rozvrh">
+                                <a class="btn btn-sm btn-clear" href="@($"/view/{veduci.Prezyvka}")"><i class="text-danger fas fa-print"></i></a>
+                            </Tooltip>
                         </Buttons>
                     </Addon>
                 </Addons>
