--- a/Plachtovac/Client/Components/Plachta/PlachtaMenu.razor
+++ b/Plachtovac/Client/Components/Plachta/PlachtaMenu.razor
@@ -90,7 +90,7 @@
                                 <Button class="btn btn-sm btn-clear" @onclick="() => ZmazVeduceho(veduci)"><i class="text-danger fas fa-user-minus"></i></Button>
                             </Tooltip>
                             <Tooltip Text="Tlač rozvrh">
-                                <a class="btn btn-sm btn-clear" href="@($"/view/{veduci.Prezyvka}")"><i class="text-danger fas fa-print"></i></a>
+                                <a class="btn btn-sm btn-clear" href="@($"./view/{veduci.Prezyvka}")"><i class="text-danger fas fa-print"></i></a>
                             </Tooltip>
                         </Buttons>
                     </Addon>
