Viac riadkove veci na donesenie

--- a/Plachtovac/Client/Pages/ViewOnly.razor
+++ b/Plachtovac/Client/Pages/ViewOnly.razor
@@ -84,6 +84,12 @@
                         <li>Čokoládu či koláč 😁</li>
                         <li>Notebook a/alebo gitaru, ak si to na chystačke sľúbil</li>
                         <li>Knižku na večerné čítanie</li>
+                        <li>Hru na poobedné voľno</li>
+                        <li>Noviny na mokré topánky</li>
+                        <li>Prezuvky</li>
+                        <li>Čelovky/baterky</li>
+                        <li>Pokrývka hlavy</li>
+                        <li>Dlhé gate</li>
                     </ul>
                 </div>
                 <div class="bonusy">
