--- a/Plachtovac/Client/Pages/ViewOnly.razor
+++ b/Plachtovac/Client/Pages/ViewOnly.razor
@@ -153,9 +153,10 @@
                                 .SelectMany(
                                     d => d.Aktivity.Where(a => a.Sablona.Typ == "Prednáška").ToList()
                                         .Where(a => (a.Veduci == null || !a.Veduci.Any()) && a.Sablona.Veduci != null && a.Sablona.Veduci.Any())
-                                        .SelectMany(a => a.Veduci.Select(av => new { Veduci = av, Aktivita = a, Den = d }))
-                                .GroupBy(x => x.Aktivita.Sablona))
-                                .Select(x => x.First()))
+                                        .SelectMany(a => a.Sablona.Veduci.Select(av => new { Veduci = av, Aktivita = a, Den = d }))
+                                ))
+                                //.GroupBy(x => x.Aktivita.Sablona))
+                                //.Select(x => x.First()))
                             .OrderBy(x => x.Den.Poradie)
                             .ThenBy(x => x.Aktivita.Time);
 
@@ -205,9 +206,10 @@
                                     .SelectMany(
                                         d => d.Aktivity.Where(a => a.Sablona.Typ == "Rozprávanie").ToList()
                                             .Where(a => (a.Veduci == null || !a.Veduci.Any()) && a.Sablona.Veduci != null && a.Sablona.Veduci.Any())
-                                            .SelectMany(a => a.Veduci.Select(av => new { Veduci = av, Aktivita = a, Den = d })))
-                                    .GroupBy(x => x.Aktivita.Sablona)
-                                    .Select(x => x.First()))
+                                            .SelectMany(a => a.Sablona.Veduci.Select(av => new { Veduci = av, Aktivita = a, Den = d })))
+                                        )
+                                    //.GroupBy(x => x.Aktivita.Sablona)
+                                    //.Select(x => x.First()))
                                 .OrderBy(x => x.Den.Poradie)
                                 .ThenBy(x => x.Aktivita.Time); 
                                 
